--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server -p 3001 db.json"
+    "server": "json-server -p 3001 db.json",
+    "start": "concurrently \"npm run dev\" \"npm run server\" "
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "concurrently": "^9.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
