--- a/part2/dataforcountries/package.json
+++ b/part2/dataforcountries/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "openmeteo": "^1.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
