--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -19,7 +19,8 @@
     "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook && npm run build && cp -r dist ../../part3/phonebook",
-    "deploy": "git add . && git commit -m uibuild && git push"
+    "deploy": "git add . && git commit -m uibuild && git push",
+    "deploy:full": "npm run build:ui && npm run deploy"
   },
   "dependencies": {
     "express": "^5.1.0",
