--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -23,6 +23,7 @@
     "deploy:full": "npm run build:ui && npm run deploy"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1"
